# 19-PersonnelAPI/src/controllers/department.controller.js
@@ -7,6 +7,19 @@ const Department = require("../models/department.model");
 
 module.exports = {
   list: async (req, res) => {
+
+        /*
+            #swagger.tags = ["Departments"]
+            #swagger.summary = "List Departments"
+            #swagger.description = `
+                You can send query with endpoint for search[], sort[], page and limit.
+                <ul> Examples:
+                    <li>URL/?<b>search[field1]=value1&search[field2]=value2</b></li>
+                    <li>URL/?<b>sort[field1]=1&sort[field2]=-1</b></li>
+                    <li>URL/?<b>page=2&limit=1</b></li>
+                </ul>
+            `
+        */
     // const data = await Department.find(search).sort(sort).skip(skip).limit(limit)
     const data = await res.getModelList(Department);
 
@@ -18,6 +31,19 @@ module.exports = {
   },
 
   create: async (req, res) => {
+
+
+        /*
+            #swagger.tags = ["Departments"]
+            #swagger.summary = "Create Department"
+            #swagger.parameters['body'] = {
+                in: 'body',
+                required: true,
+                schema: {
+                    name: 'Test Department'
+                }
+            }
+        */
     const data = await Department.create(req.body);
 
     res.status(201).send({
@@ -27,6 +53,11 @@ module.exports = {
   },
 
   read: async (req, res) => {
+
+        /*
+            #swagger.tags = ["Departments"]
+            #swagger.summary = "Get Single Department"
+        */
     const data = await Department.findOne({ _id: req.params.id });
 
     res.status(200).send({
@@ -36,6 +67,18 @@ module.exports = {
   },
 
   update: async (req, res) => {
+
+        /*
+            #swagger.tags = ["Departments"]
+            #swagger.summary = "Update Department"
+            #swagger.parameters['body'] = {
+                in: 'body',
+                required: true,
+                schema: {
+                    name: 'Test Department'
+                }
+            }
+        */
     const data = await Department.updateOne({ _id: req.params.id }, req.body, {
       runValidators: true,//eklemesek de olur ama bu modelde yapılan validasyonları uygular yanlış eksik giriş olmasın diye
     });
@@ -48,6 +91,11 @@ module.exports = {
   },
 
   delete: async (req, res) => {
+
+        /*
+            #swagger.tags = ["Departments"]
+            #swagger.summary = "Delete Department"
+        */
     const data = await Department.deleteOne({ _id: req.params.id });
 
     res.status(data.deletedCount ? 204 : 404).send({ // deletedCount datanın içindeki bi özellik
@@ -64,6 +112,11 @@ module.exports = {
   },
 
   personnels: async (req, res) => {
+
+    /*
+        #swagger.tags = ["Departments"]
+        #swagger.summary = "Personnels of Department"
+    */
     const Personnel = require("../models/personnel.model");
 
     const data = await res.getModelList(
