# 19-PersonnelAPI/src/routes/auth.router.js
@@ -17,7 +17,8 @@ const auth = require('../controllers/auth.controller')
 
 // Login/logout:
 router.post('/login', auth.login)
-router.all('/logout', auth.logout)
+// router.all('/logout', auth.logout) //swagger all metodunu görmez
+router.get('/logout', auth.logout) //swagger all metodunu görmez
 
 /* ------------------------------------------------------- */
 module.exports = router
